tests/baselines/reference/inferredStringIndex.errors.txt
tests/cases/compiler/inferredStringIndex.ts(18,1): error TS2322: Type '{ x: number; y: number; }' is not assignable to type 'Headers'.
  Property 'x' in type '{ x: number; y: number; }' is not assignable to type 'string'
tests/cases/compiler/inferredStringIndex.ts(21,1): error TS2322: Type '{ 'User-agent': string; 'Timeout': any; }' is not assignable to type 'Counts'.
  Property 'User-agent' in type '{ 'User-agent': string; 'Timeout': any; }' is not assignable to type 'number'


==== tests/cases/compiler/inferredStringIndex.ts (2 errors) ====
    
    interface Headers {
      [x: string]: string;
    }
    interface Counts {
      [x: string]: number;
    }
    
    interface Primitives {
      [x: string]: number|string;
    }
    
    let a = { 'User-agent': 'moz', 'Timeout': undefined }
    let b = { x: 1, y: 2 };
    
    let h: Headers;
    h = a; // OK
    h = b; // Error
    ~
!!! error TS2322: Type '{ x: number; y: number; }' is not assignable to type 'Headers'.
!!! error TS2322:   Property 'x' in type '{ x: number; y: number; }' is not assignable to type 'string'
    
    let c: Counts;
    c = a; // Error
    ~
!!! error TS2322: Type '{ 'User-agent': string; 'Timeout': any; }' is not assignable to type 'Counts'.
!!! error TS2322:   Property 'User-agent' in type '{ 'User-agent': string; 'Timeout': any; }' is not assignable to type 'number'
    c = b; // OK
    
    let p: Primitives
    p = a; // OK
    p = b; // OK
    